[gd_scene load_steps=29 format=3 uid="uid://nuijxwehkvbw"]

[ext_resource type="Script" path="res://Scripts/Plots.gd" id="1_ci7u4"]
[ext_resource type="PackedScene" uid="uid://dmj0miaw1fx" path="res://Scenes/plot_scene.tscn" id="2_8oole"]
[ext_resource type="Texture2D" uid="uid://bbn7y4265xj0u" path="res://Assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Mouse sprites/Catpaw pointing Mouse icon.png" id="3_b21ot"]
[ext_resource type="Texture2D" uid="uid://bvviid1ug5t8p" path="res://Assets/sproutlands-premium/tilesets/Grass.png" id="4_3m53c"]
[ext_resource type="Texture2D" uid="uid://cp617sxm7txkn" path="res://Assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Mouse sprites/Catpaw Mouse icon.png" id="4_mdx85"]
[ext_resource type="FontFile" uid="uid://ccxr3qdhilsj3" path="res://Assets/Fonts/munro/munro.ttf" id="5_2idki"]
[ext_resource type="Script" path="res://Scripts/background.gd" id="5_rd55h"]
[ext_resource type="PackedScene" uid="uid://dukmbfbtk3twc" path="res://Scenes/WaterTile.tscn" id="7_ca3o1"]
[ext_resource type="Texture2D" uid="uid://bwi5x7c6pl6rl" path="res://Assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Custom/Button (2).png" id="7_l6r25"]
[ext_resource type="FontVariation" uid="uid://0idecfjj3a8h" path="res://Assets/Fonts/munro/munro_Variation.tres" id="7_s8ch1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hcrqf"]
atlas = ExtResource("4_3m53c")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mto"]
atlas = ExtResource("4_3m53c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss11k"]
atlas = ExtResource("4_3m53c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_emccg"]
atlas = ExtResource("4_3m53c")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a06dk"]
atlas = ExtResource("4_3m53c")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lf2k"]
atlas = ExtResource("4_3m53c")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2pqd"]
atlas = ExtResource("4_3m53c")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_phhuy"]
atlas = ExtResource("4_3m53c")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o86o6"]
atlas = ExtResource("4_3m53c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11q6m"]
atlas = ExtResource("4_3m53c")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ae6v"]
atlas = ExtResource("4_3m53c")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fifc8"]
atlas = ExtResource("4_3m53c")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j403"]
atlas = ExtResource("4_3m53c")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdxl7"]
atlas = ExtResource("4_3m53c")
region = Rect2(16, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3fiu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcrqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss11k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emccg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a06dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lf2k")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2pqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phhuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o86o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11q6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ae6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fifc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j403")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdxl7")
}],
"loop": true,
"name": &"edge",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"water",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yf7cg"]
atlas = ExtResource("7_l6r25")
region = Rect2(0, 0, 90, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5seo"]
atlas = ExtResource("7_l6r25")
region = Rect2(0, 20, 90, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_0l030"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf7cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5seo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Plots" type="Panel" groups=["Persistent"]]
offset_right = 320.0
offset_bottom = 130.0
script = ExtResource("1_ci7u4")
plotScene = ExtResource("2_8oole")
hoverMouse = ExtResource("3_b21ot")
standardMouse = ExtResource("4_mdx85")

[node name="background" type="Control" parent="."]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 130.0
script = ExtResource("5_rd55h")
tiles = SubResource("SpriteFrames_a3fiu")
water = ExtResource("7_ca3o1")

[node name="ButtonGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 26.0
offset_top = 108.0
offset_right = 116.0
offset_bottom = 128.0

[node name="ButtonSprite" type="AnimatedSprite2D" parent="ButtonGroup"]
sprite_frames = SubResource("SpriteFrames_0l030")
frame = 1
frame_progress = 0.157969
centered = false

[node name="Label" type="RichTextLabel" parent="ButtonGroup"]
modulate = Color(0.705882, 0.529412, 0.384314, 1)
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 330.0
offset_bottom = 57.0
scale = Vector2(0.25, 0.25)
theme_override_fonts/normal_font = ExtResource("7_s8ch1")
theme_override_fonts/bold_font = ExtResource("7_s8ch1")
theme_override_font_sizes/normal_font_size = 41
theme_override_font_sizes/bold_font_size = 41
theme_override_font_sizes/italics_font_size = 41
theme_override_font_sizes/bold_italics_font_size = 41
theme_override_font_sizes/mono_font_size = 41
text = "+ Plot: 5 gold"

[node name="Button" type="Button" parent="ButtonGroup"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 2.0
offset_right = 360.0
offset_bottom = 74.0
scale = Vector2(0.25, 0.25)
theme_override_fonts/font = ExtResource("5_2idki")
theme_override_font_sizes/font_size = 41
text = "+ Plot: 5 gold"

[connection signal="button_down" from="ButtonGroup/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="ButtonGroup/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="ButtonGroup/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonGroup/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="ButtonGroup/Button" to="." method="_on_button_pressed"]
